<resources>
    <string name="app_name">HalEat</string>
    <string name="picture">Click</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_title">HalEat</string>
    <string name="slide_desc">Hal eat, human!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="stadistic">Stadistic</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="otras_opciones">Otras Opciones</string>

    <!-- Fragment Stadistic -->
    <string name="day">Día</string>
    <string name="week">Semana</string>
    <string name="grams">gramos</string>
    <string name="calories">calorías</string>
    <string name="proteins">proteínas</string>
</resources>
